# mcp-catalog-apps

./: README.md
.github/workflows/: README.md  mcpserver_importer-test-coverage.yml  mcpserver_importer-test.yml  test-coverage.yml
legacy/mcp-registry/: Dockerfile  README.md
legacy/mcp-registry/mcp_registry/: app.py  command_def.py  finder.py  image_builder.py  importer.py  promoter.py
mcp-blueprint-registry/: Dockerfile  README.md  blueprint_registry.py  pyproject.toml
mcp-registry/: Dockerfile  Makefile  README.md  pyproject.toml
mcp-registry/kubernetes/: mcp-registry.yaml
mcp-registry/mcp_registry/: app.py  defaults.py  finder.py  image_builder.py  importer.py  promoter.py  utils.py
mcp-server-registry/: Dockerfile  README.md  pyproject.toml  server_registry.py
mcpserver_importer/: Dockerfile  Makefile  README.md  pyproject.toml
mcpserver_importer/importer/: defaults.py  importer.py  utils.py
mcpserver_importer/tests/: __init__.py  test_defaults.py  test_importer.py  test_utils.py
