[project]
name = "mcp-blueprint-registry"
version = "0.1.0"
description = "A FastAPI application for managing MCP blueprint registry."
authors = [{ name = "Daniele Martinoli", email = "dmartino@redhat.com" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "kubernetes>=26.1.0"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"