[project]
name = "mcp-registry"
version = "0.1.0"
description = "A FastAPI application for managing MCP server registry."
authors = [{ name = "Daniele Martinoli", email = "dmartino@redhat.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.100.0",
    "starlette<0.47.0,>=0.40.0",
    "uvicorn>=0.22.0",
    "kubernetes>=26.1.0",
    "ruff",
    "isort",
    "mypy"
]
[tool.setuptools]
packages = ["mcp_registry"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 88 # Common choice (Black's default)
include = ["*.py", "*.pyi"]

exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv", # Common virtual environment names
    "env",
    "*.egg-info",
    ".ruff_cache", # Ruff's own cache directory
]


[lint]
select = [
    "E",  # Pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort (import sorting)
    "W",  # Pycodestyle warnings
    "C90", # Complexity (McCabe)
    "N",  # Naming conventions
]
ignore = []

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["mcp_registry"]
# section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false